objects/Security_Alert__c.object
<CustomObject>
    <fields>
        <fullName>Date_Encountered__c</fullName>
        <label>Date Encountered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Threat_Description__c</fullName>
        <label>Threat Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Threat_Level__c</fullName>
        <label>Threat Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Security Alert</label>
    <nameField>
        <label>Security Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Security Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>